traces/bug_869.txt
examples++-load/iovtk.cpp:2784: error: DEAD_STORE
  The value written to &reftetra (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2784:19: Write of unused value
2782.     int reftri = 1;
2783.     
2784.     if( nargs[0] )  reftetra = GetAny<long>((*nargs[0])(stack));
                          ^
2785.     if( nargs[1] )  swap = GetAny< bool >((*nargs[1])(stack));
2786.     if( nargs[2] )  reftri = GetAny<long>((*nargs[2])(stack));
